--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_storage: ^10.2.11
+  cloud_firestore: ^3.1.11
+  firebase_auth: ^3.3.13
+  firebase_core: ^1.14.0
+  file_picker: ^4.6.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
